--- a/tracker.css
+++ b/tracker.css
@@ -30,6 +30,20 @@ body {
   letter-spacing: 1px;
 }
 
+.homeBtn {
+  height: 25px;
+  padding: 5px;
+  border-radius: 6px;
+  background-color: #290583;
+  border-top: none;
+  border-left: none;
+  color: whitesmoke;
+}
+
+.homeBtn:hover {
+  background-color: rgb(22, 7, 65);
+}
+
 .page-name {
   font-size: 15px;
   letter-spacing: 1px;
